tdf#156557 Sidebar: Make Shift+Tab kb navigation behave as expected

This patch makes Shift+Tab change keyboard focus to the last panel
control of the previous panel when focus is currently on a panel title.
It also makes Shift+Tab change keyboard focus to the Tabbar hamburger
menu when focus is currently on the "Close Sidebar Deck" button.

Change-Id: I3ff849655afc4f01dba2268055292eee573adf43
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155333
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>